--- a/css/queries.css
+++ b/css/queries.css
@@ -54,6 +54,9 @@
     width: 150px;
     height: 150px;
   }
+  .slide > p {
+    height: 100px;
+  }
   .form-input input {
     max-width: 250px;
   }
@@ -73,12 +76,39 @@
 /**************************/
 
 @media (max-width: 44em) {
-  .nav-liks {
-    display: none;
-  }
+  /* .nav {
+    position: relative;
+  } */
   .bi-list {
     display: inline-block;
+    position: relative;
   }
+  .nav-links {
+    display: none;
+    position: absolute;
+    top: 3.8rem;
+    right: 0;
+    background: var(--primary);
+    flex-direction: column;
+    gap: 2rem;
+    padding: 2rem;
+    box-shadow: 0px 0px 7px 1px var(--secondary);
+    height: 90vh;
+    width: 20rem;
+    border: solid 2px var(--secondary);
+    transition: all 4s ease-out;
+  }
+  .nav-links.show {
+    display: flex;
+    -webkit-animation: scale-up-hor-right 0.4s
+      cubic-bezier(0.39, 0.575, 0.565, 1) both;
+    animation: scale-up-hor-right 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  }
+
+  .nav-links a {
+    font-size: 1.5rem;
+  }
+
   .about-content {
     flex-direction: column;
   }
@@ -93,6 +123,14 @@
     /* flex-direction: column; */
     width: 200px;
     margin-bottom: 2rem;
+  }
+  .testimonials-container {
+    padding: 1.5rem 1rem;
+  }
+  .slide > p {
+    height: 100px;
+    font-size: 1rem;
+    font-weight: 600;
   }
   .order img {
     display: none;
@@ -115,6 +153,9 @@
   section {
     padding: 2rem;
   }
+  .nav-links {
+    width: 80%;
+  }
   .about-text,
   .home-text {
     font-size: 1rem;
@@ -122,7 +163,19 @@
   .about-content img {
     width: 10rem;
   }
+  .slide > p {
+    height: 190px;
+  }
+  .testimonials-person {
+    flex-direction: column;
+  }
+  .form-input {
+    gap: 5px;
+  }
   .form-input input {
-    width: 250px;
+    width: 100%;
+  }
+  .order {
+    padding: 3rem 3px;
   }
 }
