--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ html {
 body {
   font-family: "Josefin-Sans", sans-serif;
   background: url(/images/main_background.jpg) no-repeat fixed;
-
+  overflow: hidden;
   background-size: cover;
   color: var(--white);
   /* text-align: center; */
